# ChangeLog for media-plugins/kipi-plugins
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.18 2006/12/08 22:08:14 deathwing00 Exp $

*kipi-plugins-0.1.2 (08 Dec 2006)

  08 Dec 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
  +kipi-plugins-0.1.2.ebuild:
  Version bump. Major dependency changes.

  17 Oct 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
  -kipi-plugins-0.1_beta1.ebuild, -kipi-plugins-0.1.0_beta2.ebuild,
  kipi-plugins-0.1.0_rc1.ebuild, kipi-plugins-0.1.0_rc2.ebuild:
  Cleaned-up old versions because the latest stable version was more recent.
  Added a check so that kipi-plugins dies if media-libs/imlib2 is not compiled
  with the 'X' USE flag. See bug #151683 for additional details. Thanks to
  Dominik Strehlke for spotting it.

  05 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  kipi-plugins-0.1.0_rc1.ebuild:
  Stable on sparc

*kipi-plugins-0.1.0_rc2 (20 May 2006)

  20 May 2006; Carsten Lohrke <carlo@gentoo.org>
  +kipi-plugins-0.1.0_rc2.ebuild:
  Version bump.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-kipi-plugins-0.1_beta1,
  files/digest-kipi-plugins-0.1.0_beta2,
  files/digest-kipi-plugins-0.1.0_rc1, Manifest:
  Fixing SHA256 digest, pass four

  17 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  kipi-plugins-0.1.0_rc1.ebuild:
  ppc stable, bug #113723

  23 Jan 2006; Dominik Stadler <centic@gentoo.org>
  kipi-plugins-0.1.0_rc1.ebuild:
  Make the gphoto2 dependency observe the use-flag

  15 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org>
  kipi-plugins-0.1.0_rc1.ebuild:
  Stable on amd64, bug 113723.

  03 Jan 2006; Petteri Räty <betelgeuse@gentoo.org>
  kipi-plugins-0.1.0_rc1.ebuild:
  Marked stable on x86 for bug #113723.

  27 Sep 2005; Carsten Lohrke <carlo@gentoo.org>
  kipi-plugins-0.1_beta1.ebuild, kipi-plugins-0.1.0_beta2.ebuild:
  add slot_rebuild check to older ebuilds as well
