@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/Attic/kipi-plugins-0.1.2.ebuild,v 1.1 2006/12/08 22:08:14 deathwing00 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/Attic/kipi-plugins-0.1.2.ebuild,v 1.2 2007/01/01 13:29:31 centic Exp $
 
 WANT_AUTOCONF="latest"
 WANT_AUTOMAKE="latest"
@@ -11,7 +11,7 @@ MY_P=${P/_/-}
 S=${WORKDIR}/${MY_P}
 
 DESCRIPTION="Plugins for the KDE Image Plugin Interface (libkipi)."
-HOMEPAGE="http://extragear.kde.org/apps/kipi/"
+HOMEPAGE="http://www.kipi-plugins.org/"
 SRC_URI="mirror://sourceforge/kipi/${MY_P}.tar.bz2"
 
 SLOT="0"
