@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/kipi-plugins
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.18 2006/12/08 22:08:14 deathwing00 Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.19 2007/01/01 13:29:31 centic Exp $
+
+  01 Jan 2007; Dominik Stadler <centic@gentoo.org>
+  kipi-plugins-0.1.0_rc1.ebuild, kipi-plugins-0.1.0_rc2.ebuild,
+  kipi-plugins-0.1.2.ebuild:
+  Set new homepage http://www.kipi-plugins.org/
 
 *kipi-plugins-0.1.2 (08 Dec 2006)
 
